...

        view.wantsLayer = true
        view.layer?.masksToBounds = false

        addressBarTextField.isSearchBox = isSearchBox
        addressBarTextField.placeholderString = UserText.addressBarPlaceholder
        addressBarTextField.setAccessibilityIdentifier("AddressBarViewController.addressBarTextField")

        switchToTabBox.isHidden = true
        switchToTabLabel.attributedStringValue = SuggestionTableCellView.switchToTabAttributedString

        updateView()
        // only activate active text field leading constraint on its appearance to avoid constraint conflicts
...
