...
        downloadsButton.setAccessibilityIdentifier("NavigationBarViewController.downloadsButton")
        networkProtectionButton.sendAction(on: .leftMouseDown)
        passwordManagementButton.sendAction(on: .leftMouseDown)
        aiChatButton.sendAction(on: .leftMouseDown)

        optionsButton.toolTip = UserText.applicationMenuTooltip
        optionsButton.setAccessibilityIdentifier("NavigationBarViewController.optionsButton")

        networkProtectionButton.toolTip = UserText.networkProtectionButtonTooltip

        setupNetworkProtectionButton()

#if DEBUG || REVIEW
...
