////
////  FindInPageTests.swift
////
////  Copyright © 2024 DuckDuckGo. All rights reserved.
////
////  Licensed under the Apache License, Version 2.0 (the "License");
////  you may not use this file except in compliance with the License.
////  You may obtain a copy of the License at
////
////  http://www.apache.org/licenses/LICENSE-2.0
////
////  Unless required by applicable law or agreed to in writing, software
////  distributed under the License is distributed on an "AS IS" BASIS,
////  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
////  See the License for the specific language governing permissions and
////  limitations under the License.
////
//
//import XCTest
//
//class FindInPageTests: XCTestCase {
//    private var app: XCUIApplication!
//    private var addressBarTextField: XCUIElement!
//    private var loremIpsumWebView: XCUIElement!
//    private var findInPageCloseButton: XCUIElement!
//    private let minimumExpectedMatchingPixelsInFindHighlight = 150
//
//    override class func setUp() {
//        UITests.firstRun()
//        saveLocalHTML()
//    }
//
//    override class func tearDown() {
//        removeLocalHTML()
//    }
//
//    override func setUpWithError() throws {
//        continueAfterFailure = false
//        app = XCUIApplication()
//        app.launchEnvironment["UITEST_MODE"] = "1"
//        addressBarTextField = app.windows.textFields["AddressBarViewController.addressBarTextField"]
//        loremIpsumWebView = app.windows.webViews["Lorem Ipsum"]
//        findInPageCloseButton = app.windows.buttons["FindInPageController.closeButton"]
//        app.launch()
//        app.typeKey("w", modifierFlags: [.command, .option, .shift]) // Let's enforce a single window
//        app.typeKey("n", modifierFlags: .command)
//    }
//
//    func test_findInPage_canBeOpenedWithKeyCommand() throws {
//        XCTAssertTrue(
//            addressBarTextField.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "The Address Bar text field did not exist when it was expected."
//        )
//        addressBarTextField.typeURL(Self.loremIpsumFileURL)
//        XCTAssertTrue(
//            loremIpsumWebView.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "Local \"Lorem Ipsum\" web page didn't load with the expected title in a reasonable timeframe. If this is unexpected, it can also be due to the timeout being too short."
//        )
//
//        app.typeKey("f", modifierFlags: .command)
//
//        XCTAssertTrue(
//            findInPageCloseButton.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "After invoking \"Find in Page\" with command-f, the elements of the \"Find in Page\" interface should exist."
//        )
//    }
//
//    func test_findInPage_canBeOpenedWithMenuBarItem() throws {
//        XCTAssertTrue(
//            addressBarTextField.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "The Address Bar text field did not exist when it was expected."
//        )
//        addressBarTextField.typeURL(Self.loremIpsumFileURL)
//        XCTAssertTrue(
//            loremIpsumWebView.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "Local \"Lorem Ipsum\" web page didn't load with the expected title in a reasonable timeframe. If this is unexpected, it can also be due to the timeout being too short."
//        )
//        let findInPageMenuBarItem = app.menuItems["MainMenu.findInPage"]
//        XCTAssertTrue(
//            findInPageMenuBarItem.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "Couldn't find \"Find in Page\" main menu bar item in a reasonable timeframe."
//        )
//
//        findInPageMenuBarItem.click()
//
//        XCTAssertTrue(
//            findInPageCloseButton.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "After invoking \"Find in Page\" via the menu items Edit->Find->\"Find in Page\", the elements of the \"Find in Page\" interface should exist."
//        )
//    }
//
//    func test_findInPage_canBeOpenedWithMoreOptionsMenuItem() throws {
//        XCTAssertTrue(
//            addressBarTextField.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "The Address Bar text field did not exist when it was expected."
//        )
//        addressBarTextField.typeURL(Self.loremIpsumFileURL)
//        XCTAssertTrue(
//            loremIpsumWebView.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "Local \"Lorem Ipsum\" web page didn't load with the expected title in a reasonable timeframe. If this is unexpected, it can also be due to the timeout being too short."
//        )
//        let optionsButton = app.windows.buttons["NavigationBarViewController.optionsButton"]
//        optionsButton.clickAfterExistenceTestSucceeds()
//
//        let findInPageMoreOptionsMenuItem = app.menuItems["MoreOptionsMenu.findInPage"]
//        XCTAssertTrue(
//            findInPageMoreOptionsMenuItem.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "Couldn't find More Options \"Find in Page\" menu item in a reasonable timeframe."
//        )
//        findInPageMoreOptionsMenuItem.click()
//
//        XCTAssertTrue(
//            findInPageCloseButton.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "After invoking \"Find in Page\" via the More Options \"Find in Page\" menu item, the elements of the \"Find in Page\" interface should exist."
//        )
//    }
//
//    func test_findInPage_canBeClosedWithEscape() throws {
//        XCTAssertTrue(
//            addressBarTextField.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "The Address Bar text field did not exist when it was expected."
//        )
//        addressBarTextField.typeURL(Self.loremIpsumFileURL)
//        XCTAssertTrue(
//            loremIpsumWebView.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "Local \"Lorem Ipsum\" web page didn't load with the expected title in a reasonable timeframe. If this is unexpected, it can also be due to the timeout being too short."
//        )
//        app.typeKey("f", modifierFlags: .command)
//        XCTAssertTrue(
//            findInPageCloseButton.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "After invoking \"Find in Page\" with command-f, the elements of the \"Find in Page\" interface should exist."
//        )
//
//        app.typeKey(.escape, modifierFlags: [])
//
//        XCTAssertTrue(
//            findInPageCloseButton.waitForNonExistence(timeout: UITests.Timeouts.elementExistence),
//            "After closing \"Find in Page\" with escape, the elements of the \"Find in Page\" interface should no longer exist."
//        )
//    }
//
//    func test_findInPage_canBeClosedWithShiftCommandF() throws {
//        XCTAssertTrue(
//            addressBarTextField.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "The Address Bar text field did not exist when it was expected."
//        )
//        addressBarTextField.typeURL(Self.loremIpsumFileURL)
//        XCTAssertTrue(
//            loremIpsumWebView.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "Local \"Lorem Ipsum\" web page didn't load with the expected title in a reasonable timeframe. If this is unexpected, it can also be due to the timeout being too short."
//        )
//        app.typeKey("f", modifierFlags: .command)
//        XCTAssertTrue(
//            findInPageCloseButton.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "After invoking \"Find in Page\" with command-f, the elements of the \"Find in Page\" interface should exist."
//        )
//
//        app.typeKey("f", modifierFlags: [.command, .shift])
//
//        XCTAssertTrue(
//            findInPageCloseButton.waitForNonExistence(timeout: UITests.Timeouts.elementExistence),
//            "After closing \"Find in Page\" with escape, the elements of the \"Find in Page\" interface should no longer exist."
//        )
//    }
//
//    func test_findInPage_canBeClosedWithHideFindMenuItem() throws {
//        XCTAssertTrue(
//            addressBarTextField.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "The Address Bar text field did not exist when it was expected."
//        )
//        addressBarTextField.typeURL(Self.loremIpsumFileURL)
//        XCTAssertTrue(
//            loremIpsumWebView.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "Local \"Lorem Ipsum\" web page didn't load with the expected title in a reasonable timeframe. If this is unexpected, it can also be due to the timeout being too short."
//        )
//        app.typeKey("f", modifierFlags: .command)
//        XCTAssertTrue(
//            findInPageCloseButton.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "After invoking \"Find in Page\" with command-f, the elements of the \"Find in Page\" interface should exist."
//        )
//
//        let findInPageDoneMenuBarItem = app.menuItems["MainMenu.findInPageDone"]
//        XCTAssertTrue(
//            findInPageDoneMenuBarItem.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "Couldn't find \"Find in Page\" done main menu item in a reasonable timeframe."
//        )
//        findInPageDoneMenuBarItem.click()
//
//        XCTAssertTrue(
//            findInPageCloseButton.waitForNonExistence(timeout: UITests.Timeouts.elementExistence),
//            "After closing \"Find in Page\" with escape, the elements of the \"Find in Page\" interface should no longer exist."
//        )
//    }
//
//    func test_findInPage_showsCorrectNumberOfOccurrences() throws {
//        XCTAssertTrue(
//            addressBarTextField.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "The Address Bar text field did not exist when it was expected."
//        )
//        addressBarTextField.typeURL(Self.loremIpsumFileURL)
//        XCTAssertTrue(
//            loremIpsumWebView.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "Local \"Lorem Ipsum\" web page didn't load with the expected title in a reasonable timeframe. If this is unexpected, it can also be due to the timeout being too short."
//        )
//
//        app.typeKey("f", modifierFlags: .command)
//        XCTAssertTrue(
//            findInPageCloseButton.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "After invoking \"Find in Page\" with command-f, the elements of the \"Find in Page\" interface should exist."
//        )
//
//        app.typeText("maximus\r")
//        let statusField = app.textFields["FindInPageController.statusField"]
//        XCTAssertTrue(
//            statusField.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "Couldn't find \"Find in Page\" statusField in a reasonable timeframe."
//        )
//        let statusFieldTextContent = try XCTUnwrap(statusField.value as? String)
//        XCTAssertEqual(statusFieldTextContent, "1 of 4") // Note: this is not a localized test element, and it should have a localization strategy.
//    }
//
//    func test_findInPage_showsFocusAndOccurrenceHighlighting() throws {
//        XCTAssertTrue(
//            addressBarTextField.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "The Address Bar text field did not exist when it was expected."
//        )
//        addressBarTextField.typeURL(Self.loremIpsumFileURL)
//        XCTAssertTrue(
//            loremIpsumWebView.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "Local \"Lorem Ipsum\" web page didn't load with the expected title in a reasonable timeframe. If this is unexpected, it can also be due to the timeout being too short."
//        )
//        app.typeKey("f", modifierFlags: .command)
//        XCTAssertTrue(
//            findInPageCloseButton.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "After invoking \"Find in Page\" with command-f, the elements of the \"Find in Page\" interface should exist."
//        )
//
//        app.typeText("maximus\r")
//        let statusField = app.textFields["FindInPageController.statusField"]
//        XCTAssertTrue(
//            statusField.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "Couldn't find \"Find in Page\" statusField in a reasonable timeframe."
//        )
//        let statusFieldTextContent = try XCTUnwrap(statusField.value as? String)
//        // Note: the following is not a localized test element, but it should have a localization strategy.
//        XCTAssertEqual(statusFieldTextContent, "1 of 4", "Unexpected status field text content after a \"Find in Page\" operation.")
//
//        let webViewWithSelectedWordsScreenshot = loremIpsumWebView.screenshot()
//        let highlightedPixelsInScreenshot = try XCTUnwrap(webViewWithSelectedWordsScreenshot.image.matchingPixels(of: .findHighlightColor))
//        XCTAssertGreaterThan(
//            highlightedPixelsInScreenshot.count,
//            minimumExpectedMatchingPixelsInFindHighlight,
//            "There are expected to be more than \(minimumExpectedMatchingPixelsInFindHighlight) pixels of NSColor.findHighlightColor in a screenshot of a \"Find in Page\" search where there is a match, but this test found \(highlightedPixelsInScreenshot) matching pixels."
//        )
//    }
//
//    func test_findNext_menuItemGoesToNextOccurrence() throws {
//        XCTAssertTrue(
//            addressBarTextField.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "The Address Bar text field did not exist when it was expected."
//        )
//        addressBarTextField.typeURL(Self.loremIpsumFileURL)
//        XCTAssertTrue(
//            loremIpsumWebView.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "Local \"Lorem Ipsum\" web page didn't load with the expected title in a reasonable timeframe. If this is unexpected, it can also be due to the timeout being too short."
//        )
//        app.typeKey("f", modifierFlags: .command)
//        XCTAssertTrue(
//            findInPageCloseButton.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "After invoking \"Find in Page\" with command-f, the elements of the \"Find in Page\" interface should exist."
//        )
//        app.typeText("maximus\r")
//        let statusField = app.textFields["FindInPageController.statusField"]
//        XCTAssertTrue(
//            statusField.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "Couldn't find \"Find in Page\" statusField in a reasonable timeframe."
//        )
//        let statusFieldTextContent = try XCTUnwrap(statusField.value as? String)
//        // Note: the following is not a localized test element, but it should have a localization strategy.
//        XCTAssertEqual(statusFieldTextContent, "1 of 4", "Unexpected status field text content after a \"Find in Page\" operation.")
//        let findInPageScreenshot = loremIpsumWebView.screenshot()
//        let highlightedPixelsInFindScreenshot = try XCTUnwrap(findInPageScreenshot.image.matchingPixels(of: .findHighlightColor))
//        let findHighlightPoints = Set(highlightedPixelsInFindScreenshot.map { $0.point }) // Coordinates of highlighted pixels in the find screenshot
//
//        let findNextMenuBarItem = app.menuItems["MainMenu.findNext"]
//        XCTAssertTrue(
//            findNextMenuBarItem.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "Couldn't find \"Find Next\" main menu bar item in a reasonable timeframe."
//        )
//        findNextMenuBarItem.click()
//        let updatedStatusField = app.textFields["FindInPageController.statusField"]
//        let updatedStatusFieldTextContent = updatedStatusField.value as! String
//        XCTAssertTrue(
//            updatedStatusField.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "Couldn't find the updated \"Find in Page\" statusField in a reasonable timeframe."
//        )
//        XCTAssertEqual(updatedStatusFieldTextContent, "2 of 4", "Unexpected status field text content after a \"Find Next\" operation.")
//        let findNextScreenshot = loremIpsumWebView.screenshot()
//        let highlightedPixelsInFindNextScreenshot =
//            try XCTUnwrap(Set(findNextScreenshot.image
//                    .matchingPixels(of: .findHighlightColor))) // Coordinates of highlighted pixels in the find next screenshot
//        let findNextHighlightPoints = highlightedPixelsInFindNextScreenshot.map { $0.point }
//        let pixelSetIntersection = findHighlightPoints
//            .intersection(findNextHighlightPoints) // If the highlighted text has moved as expected, this should not have many elements
//
//        XCTAssertGreaterThan(
//            highlightedPixelsInFindNextScreenshot.count,
//            minimumExpectedMatchingPixelsInFindHighlight,
//            "There are expected to be more than \(minimumExpectedMatchingPixelsInFindHighlight) pixels of NSColor.findHighlightColor in a screenshot of a \"Find in Page\" search where there is a match for a \"Find next\" operation, but this test found \(highlightedPixelsInFindNextScreenshot) matching pixels."
//        )
//        XCTAssertTrue(
//            pixelSetIntersection.count <= findNextHighlightPoints.count / 2,
//            "When the selection rectangle has moved as expected, fewer than half of the highlighted pixel coordinates from \"Find Next\" should intersect with the highlighted pixel coordinates from the initial \"Find\" operation."
//        )
//    }
//
//    func test_findNext_nextArrowGoesToNextOccurrence() throws {
//        XCTAssertTrue(
//            addressBarTextField.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "The Address Bar text field did not exist when it was expected."
//        )
//        addressBarTextField.typeURL(Self.loremIpsumFileURL)
//        XCTAssertTrue(
//            loremIpsumWebView.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "Local \"Lorem Ipsum\" web page didn't load with the expected title in a reasonable timeframe. If this is unexpected, it can also be due to the timeout being too short."
//        )
//        app.typeKey("f", modifierFlags: .command)
//        XCTAssertTrue(
//            findInPageCloseButton.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "After invoking \"Find in Page\" with command-f, the elements of the \"Find in Page\" interface should exist."
//        )
//        app.typeText("maximus\r")
//        let statusField = app.textFields["FindInPageController.statusField"]
//        XCTAssertTrue(
//            statusField.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "Couldn't find \"Find in Page\" statusField in a reasonable timeframe."
//        )
//        let statusFieldTextContent = try XCTUnwrap(statusField.value as? String)
//        // Note: the following is not a localized test element, but it should have a localization strategy.
//        XCTAssertEqual(statusFieldTextContent, "1 of 4", "Unexpected status field text content after a \"Find in Page\" operation.")
//        let findInPageScreenshot = loremIpsumWebView.screenshot()
//        let highlightedPixelsInFindScreenshot = try XCTUnwrap(findInPageScreenshot.image.matchingPixels(of: .findHighlightColor))
//        let findHighlightPoints = Set(highlightedPixelsInFindScreenshot.map { $0.point }) // Coordinates of highlighted pixels in the find screenshot
//        let findInPageNextButton = app.windows.buttons["FindInPageController.nextButton"]
//        XCTAssertTrue(
//            findInPageNextButton.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "Couldn't find \"Find Next\" main menu bar item in a reasonable timeframe."
//        )
//
//        findInPageNextButton.click()
//        let updatedStatusField = app.textFields["FindInPageController.statusField"]
//        let updatedStatusFieldTextContent = updatedStatusField.value as! String
//        XCTAssertTrue(
//            updatedStatusField.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "Couldn't find the updated \"Find in Page\" statusField in a reasonable timeframe."
//        )
//        XCTAssertEqual(updatedStatusFieldTextContent, "2 of 4", "Unexpected status field text content after a \"Find Next\" operation.")
//        let findNextScreenshot = loremIpsumWebView.screenshot()
//        let highlightedPixelsInFindNextScreenshot = try XCTUnwrap(findNextScreenshot.image.matchingPixels(of: .findHighlightColor))
//        let findNextHighlightPoints = highlightedPixelsInFindNextScreenshot.map { $0.point }
//        let pixelSetIntersection = findHighlightPoints
//            .intersection(findNextHighlightPoints) // If the highlighted text has moved as expected, this should not have many elements
//
//        XCTAssertGreaterThan(
//            highlightedPixelsInFindNextScreenshot.count,
//            minimumExpectedMatchingPixelsInFindHighlight,
//            "There are expected to be more than \(minimumExpectedMatchingPixelsInFindHighlight) pixels of NSColor.findHighlightColor in a screenshot of a \"Find in Page\" search where there is a match, but this test found \(highlightedPixelsInFindNextScreenshot) matching pixels."
//        )
//        XCTAssertTrue(
//            pixelSetIntersection.count <= findNextHighlightPoints.count / 2,
//            "When the selection rectangle has moved as expected, fewer than half of the highlighted pixel coordinates from \"Find Next\" should intersect with the highlighted pixel coordinates from the initial \"Find\" operation."
//        )
//    }
//
//    func test_findNext_commandGGoesToNextOccurrence() throws {
//        XCTAssertTrue(
//            addressBarTextField.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "The Address Bar text field did not exist when it was expected."
//        )
//        addressBarTextField.typeURL(Self.loremIpsumFileURL)
//        XCTAssertTrue(
//            loremIpsumWebView.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "Local \"Lorem Ipsum\" web page didn't load with the expected title in a reasonable timeframe. If this is unexpected, it can also be due to the timeout being too short."
//        )
//        app.typeKey("f", modifierFlags: .command)
//        XCTAssertTrue(
//            findInPageCloseButton.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "After invoking \"Find in Page\" with command-f, the elements of the \"Find in Page\" interface should exist."
//        )
//        app.typeText("maximus\r")
//        let statusField = app.textFields["FindInPageController.statusField"]
//        XCTAssertTrue(
//            statusField.waitForExistence(timeout: UITests.Timeouts.elementExistence),
//            "Couldn't find \"Find in Page\" statusField in a reasonable timeframe."
//        )
//        let statusFieldTextContent = try XCTUnwrap(statusField.value as? String)
//
//        // Note: the following is not a localized test element, but it should have a localization strategy.
//        XCTAssertEqual(statusFieldTextContent, "1 of 4", "Unexpected status field text content after a \"Find in Page\" operation.")
//        let findInPageScreenshot = loremIpsumWebView.screenshot()
//        let highlightedPixelsInFindScreenshot = try XCTUnwrap(findInPageScreenshot.image.matchingPixels(of: .findHighlightColor))
